<resources>
    <string name="app_name">Quoties</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_world">Hello, World!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_quote">Add Quote</string>
    <string name="author">Author</string>
    <string name="quote">Quote</string>
    <string name="select_date">Select Date</string>
</resources>